Commented and knitted all code files

--- a/code/Fig1_AldoChart.Rmd
+++ b/code/Fig1_AldoChart.Rmd
@@ -2,8 +2,10 @@
 title: "Fig1_AldoChart"
 author: "Kathryn Walters"
 date: "7/8/2022"
-output: html_document
-editor_options: 
+output:
+  html_document: default
+  pdf_document: default
+editor_options:
   chunk_output_type: console
 ---
 
@@ -12,7 +14,6 @@ editor_options:
 library(drc) # modeling tools
 library(tidyverse) # your go to set of functions for messing w/data
 library(RColorBrewer) # to make color schemes
-#library(ggpubr) # publication quality ggplots ha ha ha
 library(ggthemes) # additional themes for ggplot-ing
 library(gridExtra) # allows arranging of plots (rows/columns...)
 library(splitstackshape)
@@ -20,6 +21,10 @@ library(ggpubr)
 library(here)
 
 ```
+
+
+## ELISA Function 
+
 
 ```{r function, message=FALSE, warning=FALSE, include=TRUE}
 
@@ -115,14 +120,13 @@ OD$Ro_conc <- as.numeric(gsub("DMSO","0", OD$tx))
 
 names(OD)[7] <- "PB_24"
 
-#write_csv(x = OD, path = "data/output/"OD".csv")
-
 return(OD)
 }
 
 ```
 
 
+## Reading in data
 
 
 ```{r read data, include=TRUE, warning=FALSE, message=FALSE}
@@ -172,7 +176,11 @@ OD3 <- left_join(OD3, fr3[,-1], by = "Well")
 ```
 
 
+## ELISA Modeling
+
+
 ```{r ELISA modeling, include=TRUE, warning=FALSE, message=FALSE}
+#Use ELISAmodelfit Function to determine the amount of aldosterone produced in each experiment.
 OD1 <- ELISAmodelfit(OD1)
 OD1$batch <- rep("A",nrow(OD1))
 
@@ -184,11 +192,14 @@ OD3$batch <- rep("C",nrow(OD3))
 ```
 
 
+## Stimulated, Ro Treated Cells Normalization to DMSO Control
+
 
 ```{r stimdata, include=TRUE, warning=FALSE, message=FALSE}
 #combing everything into one dataframe. 
 allData <- bind_rows(OD1, OD2, OD3)
 
+#calculating percent aldosterone in the stimulated cells compared to DMSO control.
 stimData <- allData %>% filter(stim=="stim")
 dmso_A_aldo <- stimData %>% filter(batch=="A" & Ro_conc==0) %>% select(conc) %>% summarise(mean(conc)) %>% pull()
 dmso_B_aldo <- stimData %>% filter(batch=="B" & Ro_conc==0) %>% select(conc) %>% summarise(mean(conc)) %>% pull()
@@ -202,6 +213,7 @@ tmp <- mutate(stimData, pAldo = ifelse(batch == "A", 100*conc/dmso_A_aldo,
 tmp$pAldo <- as.numeric(tmp$pAldo)
 
 
+#calculating percent viability in the stimulated cells compared to DMSO control.
 dmso_A_PB <- stimData %>% filter(batch=="A" & Ro_conc==0) %>% select(PB_24) %>% summarise(mean(PB_24)) %>% pull()
 dmso_B_PB <- stimData %>% filter(batch=="B" & Ro_conc==0) %>% select(PB_24) %>% summarise(mean(PB_24)) %>% pull()
 dmso_C_PB <- stimData %>% filter(batch=="C" & Ro_conc==0) %>% select(PB_24) %>% summarise(mean(PB_24)) %>% pull()
@@ -213,6 +225,7 @@ tmp <- mutate(tmp, pPB = ifelse(batch == "A", 100*PB_24/dmso_A_PB,
               )
 tmp$pPB <- as.numeric(tmp$pPB)
 
+#calculating percent cell number in the stimulated cells compared to DMSO control. 
 dmso_B_FR <- stimData %>% filter(batch=="B" & Ro_conc==0) %>% select(FR_24) %>% summarise(mean(FR_24)) %>% pull()
 dmso_C_FR <- stimData %>% filter(batch=="C" & Ro_conc==0) %>% select(FR_24) %>% summarise(mean(FR_24)) %>% pull()
 
@@ -225,8 +238,12 @@ tmp <- mutate(tmp, pFR = ifelse(batch == "C", 100*FR_24/dmso_C_FR,
 ```
 
 
+## Unstimulated, Ro Treated Cells Normalization to DMSO Control
+
+
 ```{r unstim data, include=TRUE, warning=FALSE, message=FALSE}
 
+#calculating percent aldosterone in the unstimulated cells compared to DMSO control.
 unstimData <- allData %>% filter(stim=="unstim")
 dmso_A_aldo_us <- unstimData %>% filter(batch=="A" & Ro_conc==0) %>% select(conc) %>% summarise(mean(conc)) %>% pull()
 dmso_B_aldo_us <- unstimData %>% filter(batch=="B" & Ro_conc==0) %>% select(conc) %>% summarise(mean(conc)) %>% pull()
@@ -239,7 +256,7 @@ tmp_us <- mutate(unstimData, pAldo = ifelse(batch == "A", 100*conc/dmso_A_aldo_u
               )
 tmp_us$pAldo <- as.numeric(tmp_us$pAldo)
 
-
+#calculating percent viability in the unstimulated cells compared to DMSO control.
 dmso_A_PB_us <- unstimData %>% filter(batch=="A" & Ro_conc==0) %>% select(PB_24) %>% summarise(mean(PB_24)) %>% pull()
 dmso_B_PB_us <- unstimData %>% filter(batch=="B" & Ro_conc==0) %>% select(PB_24) %>% summarise(mean(PB_24)) %>% pull()
 dmso_C_PB_us <- unstimData %>% filter(batch=="C" & Ro_conc==0) %>% select(PB_24) %>% summarise(mean(PB_24)) %>% pull()
@@ -251,6 +268,8 @@ tmp_us <- mutate(tmp_us, pPB = ifelse(batch == "A", 100*PB_24/dmso_A_PB_us,
               )
 tmp_us$pPB <- as.numeric(tmp_us$pPB)
 
+
+#calculating percent cell number in the stimulated cells compared to DMSO control. 
 dmso_B_FR_us <- unstimData %>% filter(batch=="B" & Ro_conc==0) %>% select(FR_24) %>% summarise(mean(FR_24)) %>% pull()
 dmso_C_FR_us <- unstimData %>% filter(batch=="C" & Ro_conc==0) %>% select(FR_24) %>% summarise(mean(FR_24)) %>% pull()
 
@@ -264,36 +283,38 @@ tmp_us <- mutate(tmp_us, pFR = ifelse(batch == "C", 100*FR_24/dmso_C_FR_us,
 ```
 
 
+## Plotting Stimulated Data
 
-```{r plots, echo=FALSE, include=TRUE, warning=FALSE, message=FALSE}
 
+```{r stim plots IC50, echo=FALSE, include=TRUE, warning=FALSE, message=FALSE}
+
+#making plots for each of the stimulated categories (% aldo, % viability, %DNA)
 p_Aldo_per <- ggline(tmp, x = "Ro_conc", y = "pAldo", ylab = "% Aldosterone", add = "mean_sd", xlab = "[Ro] uM") + rremove("legend") + rotate_x_text(60) + geom_hline(yintercept = 100, linetype = "dotted", color = "grey")
 p_Aldo_per <- p_Aldo_per + ylim(0,120)
+p_Aldo_per
 ggsave(plot = p_Aldo_per, filename = "./plots/Fig1_Aldo_percent_sd.pdf", width = 3, height = 4)
 
 p_PB_per <- ggline(tmp, x = "Ro_conc", y = "pPB", ylab = "% Viability", add = "mean_sd", xlab = "[Ro] uM") + rremove("legend") + rotate_x_text(60) + geom_hline(yintercept = 100, linetype = "dotted", color = "grey")
 p_PB_per <- p_PB_per + ylim(0,120)
+p_PB_per
 ggsave(plot = p_PB_per, filename = "./plots/Fig1_PB_percent_sd.pdf", width = 3, height = 4)
 
 p_FR_per <- ggline(tmp, x = "Ro_conc", y = "pFR", ylab = "% DNA", add = "mean_sd", xlab = "[Ro] uM") + rremove("legend") + rotate_x_text(60) + geom_hline(yintercept = 100, linetype = "dotted", color = "grey")
 p_FR_per <- p_FR_per + ylim(0,120)
+p_FR_per
 ggsave(plot = p_FR_per, filename = "./plots/Fig1_FR_percent_sd.pdf", width = 3, height = 4)
 
-p_all_PR <- cowplot::plot_grid(
-  p_Aldo_per + theme(legend.position="none"),
-  p_PB_per + theme(legend.position="none"),
-  p_FR_per + theme(legend.position="none"),
-  align = 'vh',
-  #labels = c("A", "B","C"),
-  hjust = -1,
-  nrow = 1
-  )
 
-p_all_PR
-#ggsave(plot = p_all_PR, filename = "./plots/all_percent_sd.pdf", width = 12, height = 3)
+```
 
 
-#Fit for pAldo
+## IC50 Values Stimulated cells
+
+
+```{r IC50 stimulated, echo=FALSE, include=TRUE, warning=FALSE, message=FALSE}
+##Now calculating IC50 values for each of the above categories. Using a 4 parameter logistic model. 
+
+#Fit (IC50 calculation) for pAldo
 tmp2 <- tmp %>% select(Ro_conc, batch, conc)
 tmp2 <- aggregate(conc~batch+Ro_conc,tmp,mean)
 
@@ -312,41 +333,27 @@ plot(fit, type = "all")
 #Fit for pFR
 fit <- drm(formula =   pFR ~ Ro_conc , data = tmp, fct = LL.4())
 summary(fit)
-
-# This is a description of the variables and terms defined in the 'fit' model.
-# x = the independent variable (percent aldo?)
-# y = the dependent variable 
-# The 4 estimated parameters consist of the following:
-# the minimum value that can be obtained. (this is the ABS at conc. 0)
-# a = fit$coefficients[2] 
-# d = the maximum value that can be obtained (i.e. what happens at infinite dose)
-# c = the point of inflection (i.e. the point on the S shaped curve halfway between a and d)
-# b = Hill’s slope of the curve (i.e. this is related to the steepness of the curve at point c).
-# Generate points from  model. Pick range from logconc
-x <- seq(from = 0, to = 100, length=100)
-# from OD ~ d + (a - d)/(1 + (logconc/cc)^b)
-y <- (fit$coefficients[2]+ (fit$coefficients[3]- fit$coefficients[2])/(1+(x/fit$coefficients[4])^ fit$coefficients[1])) 
-
-
-plot(x = tmp$Ro_conc, y = tmp$pPB, main="log standard curve") 
-lines(x,y, lty="dotted", col="red") 
-
-fit$coefficients[4]*(
- (((fit$coefficients[3]-fit$coefficients[2])/(50-fit$coefficients[2]))-1)^(1/ fit$coefficients[1]))
+plot(fit, type = "all")
 ```
 
 
-```{r}
+## Plotting Unstimulated Data
+
+
+```{r UNstim plots and IC50, echo=FALSE, include=TRUE, warning=FALSE, message=FALSE}
+
+#making plots for each of the unstimulated categories (% aldo, % viability, %DNA)
 p_Aldo_per_us <- ggline(tmp_us, x = "Ro_conc", y = "pAldo", ylab = "% Aldosterone", add = "mean_sd", xlab = "[Ro] uM") + rremove("legend") + rotate_x_text(60) + geom_hline(yintercept = 100, linetype = "dotted", color = "grey")
 p_Aldo_per_us <- p_Aldo_per_us + ylim(0,300)
+p_Aldo_per_us
 
 p_PB_per_us <- ggline(tmp_us, x = "Ro_conc", y = "pPB", ylab = "% Viability", add = "mean_sd", xlab = "[Ro] uM") + rremove("legend") + rotate_x_text(60) + geom_hline(yintercept = 100, linetype = "dotted", color = "grey")
-
 p_PB_per_us <- p_PB_per_us + ylim(0,300)
+p_PB_per_us
 
 p_FR_per_us <- ggline(tmp_us, x = "Ro_conc", y = "pFR", ylab = "% DNA", add = "mean_sd", xlab = "[Ro] uM") + rremove("legend") + rotate_x_text(60) + geom_hline(yintercept = 100, linetype = "dotted", color = "grey")
-
 p_FR_per_us <- p_FR_per_us + ylim(0,300)
+p_FR_per_us
 
 p_all_PR_us <- cowplot::plot_grid(
   p_Aldo_per_us + theme(legend.position="none"),
@@ -358,74 +365,33 @@ p_all_PR_us <- cowplot::plot_grid(
   nrow = 1
   )
 
-p_all_PR_us
 ggsave(plot = p_all_PR_us, filename = here("plots", "Fig1Supp_Unstim_AldoELISA.pdf"), width = 6, height = 3)
 
+```
+
+
+## IC50 Unstimulated cells
+
+
+```{r IC50 unstimulated, echo=FALSE, include=TRUE, warning=FALSE, message=FALSE}
+
+##Now calculating IC50 values for each of the above categories. Using a 4 parameter logistic model. 
 
 #Fit for pAldo
 fit <- drm(formula =   pAldo ~ Ro_conc , data = tmp_us, fct = LL.4())
 summary(fit)
-
-# This is a description of the variables and terms defined in the 'fit' model.
-# x = the independent variable (percent aldo?)
-# y = the dependent variable 
-# The 4 estimated parameters consist of the following:
-# the minimum value that can be obtained. (this is the ABS at conc. 0)
-# a = fit$coefficients[2] 
-# d = the maximum value that can be obtained (i.e. what happens at infinite dose)
-# c = the point of inflection (i.e. the point on the S shaped curve halfway between a and d)
-# b = Hill’s slope of the curve (i.e. this is related to the steepness of the curve at point c).
-# Generate points from  model. Pick range from logconc
-x <- seq(from = 0, to = 100, length=100)
-# from OD ~ d + (a - d)/(1 + (logconc/cc)^b)
-y <- (fit$coefficients[2]+ (fit$coefficients[3]- fit$coefficients[2])/(1+(x/fit$coefficients[4])^ fit$coefficients[1])) 
-
-plot(x = tmp_us$Ro_conc, y = tmp_us$pAldo, main="log standard curve") 
-lines(x,y, lty="dotted", col="red") 
-
+plot(fit, type = "all")
 
 #Fit for pPB
 fit <- drm(formula =   pPB ~ Ro_conc , data = tmp_us, fct = LL.4())
 summary(fit)
-
-# This is a description of the variables and terms defined in the 'fit' model.
-# x = the independent variable (percent aldo?)
-# y = the dependent variable 
-# The 4 estimated parameters consist of the following:
-# the minimum value that can be obtained. (this is the ABS at conc. 0)
-# a = fit$coefficients[2] 
-# d = the maximum value that can be obtained (i.e. what happens at infinite dose)
-# c = the point of inflection (i.e. the point on the S shaped curve halfway between a and d)
-# b = Hill’s slope of the curve (i.e. this is related to the steepness of the curve at point c).
-# Generate points from  model. Pick range from logconc
-x <- seq(from = 0, to = 100, length=100)
-# from OD ~ d + (a - d)/(1 + (logconc/cc)^b)
-y <- (fit$coefficients[2]+ (fit$coefficients[3]- fit$coefficients[2])/(1+(x/fit$coefficients[4])^ fit$coefficients[1])) 
-
-plot(x = tmp_us$Ro_conc, y = tmp_us$pPB, main="log standard curve") 
-lines(x,y, lty="dotted", col="red") 
-
+plot(fit, type = "all")
 
 #Fit for pFR
 fit <- drm(formula =   pFR ~ Ro_conc , data = tmp_us, fct = LL.4())
 summary(fit)
+plot(fit, type = "all")
 
-# This is a description of the variables and terms defined in the 'fit' model.
-# x = the independent variable (percent aldo?)
-# y = the dependent variable 
-# The 4 estimated parameters consist of the following:
-# the minimum value that can be obtained. (this is the ABS at conc. 0)
-# a = fit$coefficients[2] 
-# d = the maximum value that can be obtained (i.e. what happens at infinite dose)
-# c = the point of inflection (i.e. the point on the S shaped curve halfway between a and d)
-# b = Hill’s slope of the curve (i.e. this is related to the steepness of the curve at point c).
-# Generate points from  model. Pick range from logconc
-x <- seq(from = 0, to = 100, length=100)
-# from OD ~ d + (a - d)/(1 + (logconc/cc)^b)
-y <- (fit$coefficients[2]+ (fit$coefficients[3]- fit$coefficients[2])/(1+(x/fit$coefficients[4])^ fit$coefficients[1])) 
-
-plot(x = tmp_us$Ro_conc, y = tmp_us$pFR, main="log standard curve") 
-lines(x,y, lty="dotted", col="red") 
 ```
 
 
