--- a/code/Fig3_PISA_RBPs_domains.Rmd
+++ b/code/Fig3_PISA_RBPs_domains.Rmd
@@ -20,23 +20,23 @@ library(ggpubr)
 library(here)
 ```
 
-reading and filtering PISA data
+## reading and filtering PISA data
 
 ```{r read_pisa, warning=FALSE,message=FALSE}
-pisa <- fread(here('data', 'VolPlot_PerseusExport.txt')) %>%
+pisa <- fread(here('data', 'PISA', 'VolPlot_PerseusExport.txt')) %>%
   filter(Significant == '+') %>%
   dplyr::select(-c(1,5,6,7,10:24))
 ```
 
-reading and filtering Steffie table with RBPs and domains (PMID: 25365966 suppl table 2)
+## reading and filtering Steffie table with RBPs and domains (PMID: 25365966 suppl table 2)
 
 ```{r read_rbp, warning=FALSE,message=FALSE}
-rbps <- read_excel(here('data', 'table_2_Steffie.xlsx'), sheet = 'RBP table') %>%
+rbps <- read_excel(here('data', 'PISA', 'table_2_Steffie.xlsx'), sheet = 'RBP table') %>%
   dplyr::select(c(1,3,4:6)) %>%
   set_colnames(c('Gene-Name', 'ENSEMBL_gene_id', 'ENSEMBL_protein_id','n_domains', 'domains' ))
 ```
 
-extracting RBPs and domains from PISA data
+## extracting RBPs and domains from PISA data
 
 ```{r extract_rbp, warning=FALSE,message=FALSE}
 pisa_rbp <- pisa %>%
@@ -57,7 +57,7 @@ pisa_rbp <- pisa %>%
                            T ~ 'combination of RBDs')))
 ```
 
-domains barplot
+## domains barplot
 
 ```{r plot_domains, warning=FALSE,message=FALSE}
 rbps_vs_domains <- pisa_rbp %>% 
