--- a/code/Fig3_Ro_ENCODEcorr.Rmd
+++ b/code/Fig3_Ro_ENCODEcorr.Rmd
@@ -1,6 +1,9 @@
 ---
-title: "Untitled"
+title: "Ro ENCODE RBP Correlation"
 output: html_document
+author: "Neel Mukherjee"
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
@@ -13,31 +16,22 @@ library(pheatmap)
 library(GeneOverlap)
 library(janitor)
 library(ggthemes)
+library(rstatix)
+library(ggpubr)
 
 `%notin%` <- Negate(`%in%`)
 ```
 
-```{r data, echo=FALSE}
+```{r data, echo=FALSE, message=FALSE, warning=FALSE}
 
+rbp_stat <- read_tsv("data/EncodeCorrelation/encode_k562_stat.tsv.gz")
 
-rbp_stat <- read_tsv("data/output/encode_k562_stat.tsv.gz")
-
-ro <- read_tsv("data/output/H295R_ro_12h_dge.tsv")
-
-
-# read_tsv("data/PISA/VolPlot_PerseusExport.txt") %>%
-#  clean_names() %>% View()
-
+ro <- read_tsv("data/EncodeCorrelation/H295R_ro_12h_dge.tsv.zip")
 
 pisa <- read_tsv("data/PISA/VolPlot_PerseusExport.txt") %>%
   clean_names() %>%
   filter(significant=="+") %>%
   pull(gene_name)
-
-read_tsv("data/PISA/VolPlot_PerseusExport.txt") %>%
-  clean_names() %>% View()
-  filter(significant=="+") %>%
-  pull(gene_name) %>% 
 
 ```
 
@@ -52,12 +46,6 @@ colnames(cor_data) <- gsub(pattern = "_log2FC", replacement = "", x = colnames(c
 colnames(cor_data) <- gsub(pattern = "_stat", replacement = "", x = colnames(cor_data))  
 
 
-# 
-# plot(cor_data$stat,cor_data$MSI2)
-# 
-# plot(cor_data$stat,cor_data$SF3B1)
-
-library(rstatix)
 mydata <- cor_data %>% 
   dplyr::select_if(is.numeric) %>%
   as.matrix()
@@ -86,30 +74,6 @@ tmp <- read_tsv("data/PISA/VolPlot_PerseusExport.txt") %>%
 pearCor <- merge(pearCor, tmp, by.x = "rbp", by.y="gene_name", all.x = T)
 
 
-
-
-# ggplot(pearCor %>% filter(pisa!="not detected"), aes(Pearson, color = pisa)) +
-#   stat_ecdf() +
-#   scale_color_manual(values = c("red","black")) +
-#   geom_rug() +
-#   xlab("Correlation between Ro and RBP depletion") +
-#   ylab("cumulative fraction") +
-#   geom_vline(xintercept=0, linetype="dashed", color = "black") +
-#   geom_vline(xintercept=pearCor %>% filter(rbp=="MSI2") %>% pull(Pearson), linetype="dashed", color = "grey") +
-#   theme_few()
-# 
-# ggplot(pearCor %>% filter(pisa!="not detected"), aes(Pearson, color = pisa)) +
-#   geom_density() +
-#   scale_color_manual(values = c("red","black")) +
-#   geom_rug() +
-#   xlab("Correlation between Ro and RBP depletion") +
-#   ylab("cumulative fraction") +
-#   geom_vline(xintercept=0, linetype="dashed", color = "black") +
-#   geom_vline(xintercept=pearCor %>% filter(rbp=="MSI2") %>% pull(Pearson), linetype="dashed", color = "grey") +
-#   theme_few()
-
-# pearCor %>% filter(pisa=="interaction" | rbp =="MSI2" ) %>% str()
-
 pisaANDencode <- pearCor %>% filter(pisa=="interaction" | rbp =="MSI2" ) %>% 
   mutate(
     cat = case_when(
@@ -121,9 +85,6 @@ pisaANDencode <- pearCor %>% filter(pisa=="interaction" | rbp =="MSI2" ) %>%
   )
 
 
-
-library(ggpubr)
-
 pisaANDencode$cat <- factor(pisaANDencode$cat, levels = c("similar", "no relationship", "MSI2", "opposite"))
 
 mypal <- c("#CC79A7",
@@ -131,21 +92,14 @@ mypal <- c("#CC79A7",
 "#F0E442",
 "#56B4E9")
 
-# palette.colors(NULL, "Okabe-Ito")
-#  
-# p = palette.colors(NULL, "Okabe-Ito")
-# pie(rep(1, times=9), col=p, labels=p)
-# 
-
-
-ggbarplot(pisaANDencode, x = "rbp", y = "Pearson", sort.val = "desc", sort.by.groups = F, fill = "cat",
+barplot <- ggbarplot(pisaANDencode, x = "rbp", y = "Pearson", sort.val = "desc", sort.by.groups = F, fill = "cat",
   label = F, label.pos = "out", palette = mypal) + rotate_x_text(60) + ylim(-.35,.35)
 
 
-p_pisa_knockdown <- ggdotchart(pisaANDencode, x = "rbp", y = "Pearson", sorting = "descending", add = "segments", color = "cat", palette = mypal, dot.size = 3) +  ylim(-.37,.37) + geom_hline(yintercept = 0, linetype = 2, color = "lightgray")
+p_pisa_knockdown <- ggdotchart(pisaANDencode, x = "rbp", y = "Pearson", sorting = "descending", add = "segments", color = "cat", palette = mypal, dot.size = 3) +  ylim(-.37,.37) + geom_hline(yintercept = 0, linetype = 2, color = "lightgray") + xlab("") + ylab("Correlation") + theme(legend.position="none")
 
 
-ggsave("plots/pisa_knockdown.pdf", plot = p_pisa_knockdown, width = 8, height = 5)
+ggsave("plots/Fig3_pisa_knockdownCorr.pdf", plot = p_pisa_knockdown, width = 4, height = 3)
 
 ```
 
