--- a/code/encode_and_H295R_preprocessing.Rmd
+++ b/code/encode_and_H295R_preprocessing.Rmd
@@ -163,8 +163,14 @@ preprocessing H295R data from 12 h time point
 
 kallisto quantification was done before dge analysis as described in materials and methods
 
+```{bash}
+cd data
+tar -xvzf kallisto_res.tar.gz
+```
+
+
 ```{r dge_H295R, warning=FALSE, message=FALSE}
-files <- paste0(list.dirs(path = here('data','kallisto_res'), full.names = T, 
+files <- paste0(list.dirs(path = here('data','kallisto_res'), full.names = TRUE, 
                           recursive = F),'/abundance.tsv')
 names(files) <- paste0(rep(c('DMSO_rep','Ro_rep'), each = 2), rep(c(1:2),
                                                                   times = 2))
