--- a/code/Fig1_CortisolCharts.Rmd
+++ b/code/Fig1_CortisolCharts.Rmd
@@ -172,6 +172,10 @@ OD5stim$pPB <- as.numeric(OD5stim$pPB)
 OD5us$pPB <- 100*OD5us$viability_1hr/dmso_PB_us
 OD5us$pPB <- as.numeric(OD5us$pPB)
 
+colnames(OD5) <- c("tx", "dil", "stim", "Well", "OD_450", "OD_540", "OD_570", "PB_24", "viability_1hr", "corrected", "loganswer", "conc pg/mL", "below Std Curve", "above Std Curve", "dilutionCorrected_conc", "Ro_conc")
+
+write.xlsx(OD5, here("output", "CortisolELISAvalues.xlsx"), sheetName = "Sheet1", col.names = TRUE)
+
 ```
 
 
